--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
           <div class="skill-card">Express.js</div>
           <div class="skill-card">MongoDB</div>
           <div class="skill-card">Python</div>
-          <div class="skill-card">HTML5 / CSS3</div>
+          <div class="skill-card">HTML5</div>
+           <div class="skill-card">CSS3</div>
           <div class="skill-card">REST APIs</div>
           <div class="skill-card">Git / GitHub</div>
           <div class="skill-card">Figma</div>
