--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           </p>
 
           <div class="about-buttons">
-            <a href="images/Supriyo revamped resume edited (3).pdf" class="circle-btn resume" target="_blank" rel="noopener noreferrer">
+            <a href="images/Supriyo revamped resume edited4.pdf" class="circle-btn resume" target="_blank" rel="noopener noreferrer">
   Resume
 </a>
             <a href="#projects" class="circle-btn projects">Projects</a>
