--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           </p>
 
           <div class="about-buttons">
-            <a href="images/Supriyo revamped resume edited4.pdf" class="circle-btn resume" target="_blank" rel="noopener noreferrer">
+            <a href="images/Supriyo revamped resume edited2.pdf" class="circle-btn resume" target="_blank" rel="noopener noreferrer">
   Resume
 </a>
             <a href="#projects" class="circle-btn projects">Projects</a>
@@ -162,6 +162,19 @@
       <div class="container">
         <h2 class="section-title">Projects</h2>
         <div class="project-grid">
+           <div class="project-card">
+            <img
+              src="images/Screenshot 2025-11-05 at 4.47.33 PM.png"
+              alt="Encrypted Chat App"
+            />
+            <h3>
+             <a href="https://encryptedchat-1-lxy1.onrender.com/" target="_blank" rel="noopener noreferrer">
+    Encrypted Chat App
+    </a></h3>
+            <p>
+             Built an AES-GCM–encrypted real-time chat App with Node.js, Socket.IO, AES-GCM encryption, and MongoDB, deployed on Render.
+            </p>
+          </div>
           <div class="project-card">
             <img
               src="images/Screenshot 2025-11-01 at 4.39.56 PM.png"
@@ -175,6 +188,7 @@
               Developed a role-based ERP & LMS quiz platform with payment integration, timed sessions, tab-switch detection, and real-time question tracking.
             </p>
           </div>
+          
           <div class="project-card">
             <img
               src="images/Screenshot 2025-11-01 at 5.45.44 PM.png"
@@ -220,7 +234,7 @@
    Microservice-Based Credential
     </a></h3>
             <p>
-             Built and deployed the Kube Credential microservice app on Render using Docker, with Node.js (TypeScript) APIs and a React frontend for credential issuance and verification.
+             Built the Kube Credential microservice app using Docker with Node.js (TypeScript) APIs and React frontend for credential issuance and verification.
             </p>
           </div>
           <div class="project-card">
