--- a/index.html
+++ b/index.html
@@ -162,6 +162,19 @@
       <div class="container">
         <h2 class="section-title">Projects</h2>
         <div class="project-grid">
+             <div class="project-card">
+            <img
+              src="images/Screenshot 2025-11-09 at 12.45.02 AM.png"
+              alt="CRUD App(Expo + REST API)"
+            />
+            <h3>
+             <a href="https://crud-reactnative.vercel.app/" target="_blank" rel="noopener noreferrer">
+    CRUD App(Expo + REST API)
+    </a></h3>
+            <p>
+            Developed a cross-platform CRUD app using React Native, Expo, and Axios with React Hooks for state management and deployed it on Vercel.
+            </p>
+          </div>
            <div class="project-card">
             <img
               src="images/Screenshot 2025-11-05 at 4.47.33 PM.png"
@@ -210,7 +223,7 @@
    Next.js Implementation
     </a></h3>
             <p>
-              Implemented and built the Supreme Group website frontend using Next.js, following modern best practices and accurately translating the Figma design and assets.
+              Built Supreme Group website frontend with Next.js, translating Figma designs using modern best practices.
             </p>
           </div>
           <div class="project-card">
